--- a/views/magie.jade
+++ b/views/magie.jade
@@ -100,7 +100,7 @@ html(lang="de")
 						li
 							a(href="/zauber/"+_id) Zauber
 						li
-							a Ritualkenntnis
+							a(href="/ritual/"+_id) Ritualkenntnis
 						li
 							a Rituale
 
