--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -22,6 +22,10 @@ html(lang="de")
 			li
 				a(href="/variante/neu") Neue Zauber-Variante
 			li
+				a(href="/ritual/liste") Übersicht der Rituale
+			li
+				a(href="/ritual/neu") Neues Ritual
+			li
 				a(href="/liturgie/liste") Übersicht der Liturgien
 			li
 				a(href="/liturgie/neu") Neue Liturgie
