Created Ritual display table.

--- a/views/system/table-of-miracles.jade
+++ b/views/system/table-of-miracles.jade
@@ -9,7 +9,7 @@ html
 			h1 {
 				text-align: center;
 			}
-			section {
+			section, header, main, footer {
 				padding: 0 5em;
 			}
 			table {
